--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #fafafa;
   --foreground: #171717;
 }
 
@@ -14,7 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #fafafa;
     --foreground: #ededed;
   }
 }
@@ -23,4 +23,34 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.input-field {
+  width: 100px;
+  height: 40px;
+  padding-left: 0.75rem; /* pl-3 */
+  display: block;
+  border-radius: 9999px; /* rounded-full */
+  border-width: 1px;
+  border-color: #1a1a1a; /* border-gray-800 */
+}
+
+.input-field:focus {
+  border-color: #3b82f6; /* focus:border-blue-500 */
+  --tw-ring-color: #3b82f6; /* focus:ring-blue-500 */
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.form-shadow {
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+}
+
+.header-shadow {
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.rounded-top {
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
