--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,9 +35,26 @@ body {
   border-color: #1a1a1a; /* border-gray-800 */
 }
 
+.input-field-error {
+  width: 100px;
+  height: 40px;
+  padding-left: 0.75rem; /* pl-3 */
+  display: block;
+  border-radius: 9999px; /* rounded-full */
+  border-width: 3px;
+  border-color: #ef4444; /* focus:border-blue-500 */
+}
+
 .input-field:focus {
   border-color: #3b82f6; /* focus:border-blue-500 */
   --tw-ring-color: #3b82f6; /* focus:ring-blue-500 */
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.input-field-error:focus {
+  border-color: #ef4444; /* focus:border-blue-500 */
+  --tw-ring-color: #ef4444; /* focus:ring-blue-500 */
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
@@ -53,4 +70,9 @@ body {
 .rounded-top {
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
+}
+
+.rounded-bottom {
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
