table fully styled

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -136,7 +136,7 @@ body {
 }
 
 .header-shadow {
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.2);
 }
 
 .rounded-top {
