--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -90,11 +90,18 @@ body {
 }
 
 .marketing-input-field {
-  width: 100px;
+  width: 100%;
   height: 40px;
   padding-left: 0.75rem; /* pl-3 */
   display: block;
   border-radius: 9999px; /* rounded-full */
+  border-width: 1px;
+  border-color: #8ABBFD; /* border-gray-800 */
+  color: #585858;
+}
+
+.marketing-input-field::placeholder {
+  color: #A0A0A0;
 }
 
 .input-field-error {
