--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -155,6 +155,20 @@ body {
   border-radius: 1rem;
 }
 
+.payroll-table-row-style {
+  border: 1px solid #DFDFDF;
+  box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.15);
+  background-color: white;
+  width: 772px;
+  position: relative;
+  /* display: flex;
+  align-items: center;
+  justify-content: space-between; */
+  /* display: flex;
+  align-items: center; */
+  border-radius: 1rem;
+}
+
 .table-row-text {
   color: #585858;
   font-size: 16px;
