--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -99,6 +99,28 @@ body {
   color: #A0A0A0;
 }
 
+.payroll-input-field {
+  width: 100%;
+  height: 40px;
+  padding-left: 0.75rem; /* pl-3 */
+  display: block;
+  border-radius: 9999px; /* rounded-full */
+}
+
+.payroll-input-field-error {
+  width: 100%;
+  height: 40px;
+  padding-left: 0.75rem; /* pl-3 */
+  display: block;
+  border-radius: 9999px; /* rounded-full */
+  border-width: 1px;
+  border-color: #ef4444; /* focus:border-blue-500 */
+}
+
+.payroll-input-field::placeholder {
+  color: #A0A0A0;
+}
+
 .marketing-input-field {
   width: 100%;
   height: 40px;
